# Thermite

./: .gitignore  Cargo.toml  README.md  readme.md
examples/: dll_injector.rs  etw_patcher.rs  freshycalls.rs  halos_gate.rs  hardware_breakpoints.rs  indirect_syscalls.rs  patchless_amsi_bypass.rs  process_enumeration.rs  readme.md  shellcode_injector.rs  systemfunction032.rs  test_direct_new_stub.rs
src/: breakpoints.rs  dll_parser.rs  error.rs  exports.rs  lib.rs  main.rs  peb.rs  peb_walk.rs  syscalls.rs  utils.rs
src/enumeration/: mod.rs  processes.rs
src/examples/: direct_syscalls_shellcode_injector.rs  shellcode_injector.rs
src/model/: mod.rs  pe_file_format.rs  peb_teb.rs
src/model/windows/: mod.rs  nt_status.rs  pe_file_format.rs  peb_teb.rs
src/models/: mod.rs
src/models/windows/: mod.rs  nt_status.rs  pe_file_format.rs  peb_teb.rs  system_info.rs
src/syscalls/: direct.rs  indirect.rs  mod.rs
src/types/: mod.rs  pe_file_format.rs
