[package]
name = "thermite"
version = "0.1.0"
edition = "2021"

[lib]
name = "thermite"
path = "src/lib.rs"
doc = true
crate-type = ["lib"]

[[example]]
name = "shellcode-injector"
path = "examples/shellcode_injector.rs"
test = false
bench = false

[dependencies]
log = "0.4.21"

# Not needed I just wanted to learn about cargo profiles
[profile.release]
debug = false           # Well of course
lto = true              # Link Time Optimization. Produces better optimized code at the cost of longer linking time.
opt-level = "s"         # just S because Z is not that smaller and loop vectorization is cool
overflow-checks = false # When overflow-checks are enabled, a panic will occur on overflow.
strip = "symbols"       # Equivalent to strip = true  # Max strip level 
debug-assertions=false  # Disable debug assertion, no cool in release 
panic="abort"           # Only two valid options and I don't want unwind
rpath = false           # Disables the runtime search path to find required libraries

[profile.dev]
debug = false
lto = true
opt-level = "s"
overflow-checks = false
strip = "symbols"
debug-assertions=false
#panic="abort"
rpath = false