[package]
name = "thermite"
version = "0.1.0"
edition = "2021"

[lib]
name = "thermite"
path = "src/lib.rs"
doc = true
crate-type = ["lib"]

[dependencies]
log = "0.4.21"
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["winnt", "ntdef", "ntstatus", "errhandlingapi", "winuser", "libloaderapi", "minwindef", "excpt"] }
widestring = "1.0.2"

windows = "0.54.0"


#
#[target.x86_64-pc-windows-gnu]
#linker = "C:\\msys2\\mingw64\\bin\\gcc.exe"
#ar = "C:\\msys2\\mingw64\\bin\\ar.exe"



# Not needed I just wanted to learn about cargo profiles
[profile.release]
debug = false           # Well of course
lto = true              # Link Time Optimization. Produces better optimized code at the cost of longer linking time.
opt-level = "s"         # just S because Z is not that smaller and loop vectorization is cool
overflow-checks = false # When overflow-checks are enabled, a panic will occur on overflow.
strip = "symbols"       # Equivalent to strip = true  # Max strip level 
debug-assertions = false  # Disable debug assertion, no cool in release
panic = "abort"           # Only two valid options and I don't want unwind
rpath = false           # Disables the runtime search path to find required libraries

[profile.dev]
debug = false
lto = true
opt-level = "s"
overflow-checks = false
strip = "symbols"
debug-assertions = false
#panic="abort"
rpath = false